<resources>
    <string name="app_name">Foot Skill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Логин</string>
    <string name="logo">logo</string>
    <string name="log_in">Войти</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="password">Пароль</string>
    <string name="imput_pass">Введите Ваш пароль</string>
    <string name="input_log">Введите Ваш логин</string>
    <string name="telephone">Телефон</string>
    <string name="inputPhone">Введите Ваш телефон</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="statsLabel">Статистика</string>
    <string name="acheivmentLabel">Достижения</string>
    <string name="scheduleLabel">Расписание</string>
    <string name="profileLabel">Профиль</string>
    <string name="poity_nahuy">Пойти нахуй</string>
    <string name="incorrect_credits">Неправильный номер телефона или пароль</string>
    <string name="title_activity_more_achievements">MoreAchievementsActivity</string>
</resources>