<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.oldi.football.MainActivity">

    <View
        android:id="@+id/loseFocus"
        android:layout_width="398dp"
        android:layout_height="706dp"
        android:focusable="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLogin"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="52dp"
        android:textColorHint="#B9B8B8"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/inputPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="176dp"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTintMode="add"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/inputPhone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/inputPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/light_green"
        android:text="@string/remember_me"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="203dp"
        android:layout_height="63dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/light_green"
        android:backgroundTintMode="add"

        android:enabled="true"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/telephone"
        app:layout_constraintBottom_toTopOf="@+id/inputLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/inputPass"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="88dp"
        android:textColorHint="#B9B8B8"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="176dp"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTintMode="add"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/imput_pass"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:textColor="#C30505"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loseFocus">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/red_logo"
            tools:ignore="ImageContrastCheck" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/white" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>